--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://www.freepnglogos.com/uploads/starbucks-coffee-green-logo-28.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Webiks Gal Ben Natan</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml"
+    href="https://www.freepnglogos.com/uploads/starbucks-coffee-green-logo-28.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Webiks Gal Ben Natan</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
